fixed stretch on program subpage images

--- a/content/css/program.css
+++ b/content/css/program.css
@@ -87,4 +87,8 @@
     box-shadow: 1px 2px #23272a22;
 }
 
+.program__card img {
+    object-fit: cover;
+}
+
 /* #endregion */
